Fix spacings

--- a/src/scss/components/_workflow.scss
+++ b/src/scss/components/_workflow.scss
@@ -64,7 +64,7 @@ $number-height-sm: 50px;
 @include media-breakpoint-down(md) {
   .workflow {
     .workflow-block {
-      width: 75%;
+      width: 85%;
     }
   }
 }
